# hyprsnow

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  hyprland.rs  main.rs  snow.rs
