[package]
name = "hyprsnow"
version = "0.1.5"
edition = "2024"
authors = ["Alex Spinu"]
description = "Simple and configurable snow effect for Hyprland"
keywords = ["hyprland", "snow", "effect"]
categories = ["graphics", "command-line-utilities"]
documentation = "https://github.com/spinualexandru/hyprsnow#readme"
homepage = "https://github.com/spinualexandru/hyprsnow"
repository = "https://github.com/spinualexandru/hyprsnow"
license = "MIT"

[dependencies]
iced = { version = "0.14.0", features = ["canvas", "smol", "image"] }
iced_layershell = "0.14.0-beta3"
clap = { version = "4", features = ["derive"] }
rand = "0.10.0-rc.5"
hyprland = "0.4.0-beta.3"
tokio = { version = "1", features = ["rt", "sync"] }
hyprlang = { version = "0.3.0", features = ["mutation"] }
notify = "8.2.0"

[[bin]]
name = "hyprsnow"
path = "src/main.rs"
